--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -2,7 +2,9 @@ FROM python:3.9.15-slim
 
 WORKDIR /opt
 
-COPY /tasks/* /opt/
+COPY /task_queue/ ./task_queue/
+
+COPY requirements.txt .
 
 RUN pip install -r requirements.txt
 
