Add abort task. More models. Install procps

--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -5,6 +5,8 @@ WORKDIR /opt
 COPY requirements.txt .
 
 RUN pip install -r requirements.txt
+RUN pip install setproctitle
+RUN apt-get update && apt-get install -y procps
 
 COPY /task_queue/ ./task_queue/
 
